--- a/app/views/admin/episodes/index.html.erb
+++ b/app/views/admin/episodes/index.html.erb
@@ -2,7 +2,9 @@
   <div class="max-w-4xl mx-auto bg-white p-8 rounded shadow-md">
     <h1 class="text-2xl font-bold mb-6">エピソード投稿</h1>
 
-    <%= render "form", episode: @episode %>
+    <div class="bg-white border rounded-md shadow-md p-6">
+      <%= render "form", episode: @episode %>
+    </div>
 
     <h2 class="text-xl font-semibold mt-12 mb-4">投稿済みエピソード一覧</h2>
 
