--- a/app/views/admin/episodes/index.html.erb
+++ b/app/views/admin/episodes/index.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <h2 class="text-xl font-semibold mt-12 mb-4">投稿済みエピソード一覧</h2>
-
+    <%= paginate @episodes %>
     <% if @episodes.any? %>
       <ul class="space-y-6">
         <% @episodes.each do |episode| %>
