--- a/app/views/admin/episodes/index.html.erb
+++ b/app/views/admin/episodes/index.html.erb
@@ -17,7 +17,7 @@
             <p class="text-sm text-gray-500">
               公開日: <%= episode.published_at.strftime("%Y-%m-%d %H:%M") %>
             </p>
-            <p class="mt-2 whitespace-pre-line text-gray-800"><%= episode.description %></p>
+            <p class="mt-2 whitespace-pre-line break-words text-gray-800"><%= episode.description %></p>
             <p class="mt-1 text-sm text-gray-500">再生時間: <%= episode.duration.presence || "未設定" %></p>
 
             <div class="mt-4">
@@ -34,7 +34,7 @@
                 </audio>
               <% end %>
             </div>
-            <div class="mt-4">
+            <div class="mt-4 text-right">
               <%= link_to "編集する", edit_admin_episode_path(episode.id),
                           class: "text-sm text-blue-600 hover:underline" %>
             </div>
