公開一覧をルートパスにした

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <!-- ヘッダー -->
     <header class="bg-white shadow sticky top-0 z-50">
       <div class="max-w-5xl mx-auto px-4 py-3">
-        <%= link_to "桐生あんず電波局", episodes_path, class: "text-xl font-bold text-gray-800 hover:text-blue-600 transition" %>
+        <%= link_to "桐生あんず電波局", root_path, class: "text-xl font-bold text-gray-800 hover:text-blue-600 transition" %>
       </div>
     </header>
 
