公開詳細画面もテキストに改行いれるようにする

--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -20,7 +20,7 @@
     <% end %>
   </div>
 
-  <div class="mt-4 whitespace-pre-line text-gray-800">
+  <div class="mt-4 whitespace-pre-line break-words text-gray-800">
     <%= @episode.description %>
   </div>
 </div>
