description に含まれるURLを link_to でハイパーリンク化するように変更

--- a/app/views/admin/episodes/index.html.erb
+++ b/app/views/admin/episodes/index.html.erb
@@ -17,7 +17,7 @@
             <p class="text-sm text-gray-500">
               公開日: <%= episode.published_at.strftime("%Y-%m-%d %H:%M") %>
             </p>
-            <p class="mt-2 whitespace-pre-line break-words text-gray-800"><%= episode.description %></p>
+            <p class="mt-2 whitespace-pre-line break-words"><%= description_included_url(episode.description) %> </p>
             <p class="mt-1 text-sm text-gray-500">再生時間: <%= episode.duration.presence || "未設定" %></p>
 
             <div class="mt-4">
