--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -21,6 +21,6 @@
   </div>
 
   <div class="mt-4 whitespace-pre-line break-words text-gray-800">
-    <%= @episode.description %>
+    <%= description_included_url(@episode.description) %>
   </div>
 </div>
